kubectl-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: andruschow-service
spec:
  type: NodePort
  selector:
    app: andruschow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
