kubectl-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: andruschow-ingress
  namespace: default
  annotations:
    networking.gke.io/managed-certificates: andruschow-de-certificate
spec:
  backend:
    serviceName: andruschow-service
    servicePort: 80
  rules:
  - host: andruschow.de
    http:
      paths:
      - path: /
        backend:
          serviceName: andruschow-service
          servicePort: 80
